Updated with Blog link
Updated with Blog link

--- a/hawk_eye.html
+++ b/hawk_eye.html
@@ -165,6 +165,7 @@
 							</li>
                             
 							<li><a href="contact.html" >Contact</a></li>
+							<li><a href="http://knowledge.logicqsoftsol.com/knowledge/blog/" >Our Knowledge Center Blog</a></li>
 						</ul>
 					</div>
 				</div>
